[project]
name = "erbsland-sphinx-ansi"
description = "A Sphinx extension to format ANSI colored/formated terminal output"
authors = [{ name = "Tobias Erbsland / Erbsland DEV", email = "info@erbsland.dev" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/erbsland-dev/erbsland-sphinx-ansi"
Issues = "https://github.com/erbsland-dev/erbsland-sphinx-ansi/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
test = ["pytest", "docutils"]
dev = [{ include-group = "test" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.hatch-test]
dependency-groups = ["test"]

[tool.hatch.build.targets.wheel]
packages = ["src/erbsland"]

[tool.hatch.build.hooks.vcs]
version-file = "src/erbsland/sphinx/ansi/_version.py"

[tool.hatch.metadata]
allow-ambiguous-features = true
sources = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]
